# DjangoCleanArch

./: .gitignore  README.md  manage.py  pyproject.toml
apps/accounts/application/: services.py  use_cases.py
apps/accounts/controller/: serializers.py  views.py
apps/accounts/domain/: models.py
apps/accounts/domain/migrations/: 0001_initial.py
apps/accounts/infrastructure/: linkedin_gateway.py  openai_gateway.py  repositories.py
commands/management/commands/: generate_clean_app.py
config/: urls.py
config/settings/: base.py  development.py  production.py  settings.py  test.py
docs/: arch.md  help.txt
